--- a/templates/server_interface.html
+++ b/templates/server_interface.html
@@ -704,28 +704,43 @@ fill: #2B641E;
                 
                 <!-- File Sending Section -->
                 <input type="file" id="file-input" class="hidden" onchange="previewFile()">
-                <button onclick="document.getElementById('file-input').click()" class="btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Choose File</button>
+                <button onclick="document.getElementById('file-input').click()" class="btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Send File</button>
 
-                                <!-- Modal for file preview and confirmation -->
+                <!-- Modal for file preview and confirmation -->
                 <div id="filePreviewModal" class="hidden fixed inset-0 bg-black bg-opacity-30 backdrop-filter backdrop-blur-sm flex justify-center items-center">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content bg-gray-800 text-white rounded-lg mx-auto p-4">
                             <div class="modal-header border-b border-gray-700 p-4 flex justify-between items-center">
                                 <h5 class="modal-title">File Preview</h5>
-                                <button type="button" class="close text-gray-400 hover:text-white" onclick="toggleModal('filePreviewModal', false)">
+                                <button type="button" class="close text-gray-400 hover:text-white" onclick="toggleModal('filePreviewModal', false); cancelUpload()">
                                     &times;
                                 </button>
                             </div>
-                            <div class="modal-body bg-gray-700 p-4">
-                                <p id="file-info"></p> <!-- Place for file information -->
+                            <div class="modal-body bg-gray-700 p-4 space-y-4">
+                                <div id="file-preview" class="file-preview flex justify-center items-center">
+                                <!-- SVG Add File icon will be programmatically shown or hidden -->
+                                <label for="file-input" class="cursor-pointer">
+                                    <svg fill="#000000" width="64px" height="64px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4,23H20a1,1,0,0,0,1-1V6a1,1,0,0,0-.293-.707l-4-4A1,1,0,0,0,16,1H4A1,1,0,0,0,3,2V22A1,1,0,0,0,4,23ZM5,3H15.586L19,6.414V21H5Zm11,9a1,1,0,0,1-1,1H13v2a1,1,0,0,1-2,0V13H9a1,1,0,0,1,0-2h2V9a1,1,0,0,1,2,0v2h2A1,1,0,0,1,16,12Z"></path>
+                                    </svg>
+                                </label>
+                                 </div>
+                                <p id="file-info" class="text-sm text-gray-300"></p> <!-- Place for file information -->
+                                <input type="file" id="file-input" class="hidden" onchange="previewFile()">
+                                <button type="button" class="btn btn-red-500" onclick="removeSelectedFile()">Remove File</button>
+                                <div class="progress mb-3 hidden">
+                                    <div class="progress-bar mb-3 bg-blue-600" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                                </div>
                             </div>
                             <div class="modal-footer border-t border-gray-700 p-4">
-                                <button type="button" class="btn btn-red-500" onclick="toggleModal('filePreviewModal', false)">Cancel</button>
+                                <button type="button" class="btn btn-red-500" onclick="toggleModal('filePreviewModal', false); cancelUpload()">Cancel</button>
                                 <button type="button" class="btn btn-primary" onclick="sendFileToDevicePreview()">Send File</button>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                                
                 <!-- Recording Section -->
                 <button id="toggleRecordButton" class="btn btn-accent rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" type="button">Start Recording</button>    
                 
@@ -743,13 +758,7 @@ fill: #2B641E;
                 </div>
             </div>
                     </div>
-                    <!-- Remaining code... -->
-    
-                    <div class="progress mb-3" style="display: none;">
-                        <div class="progress-bar mb-3" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-                    </div>
-                    
-                    
+                    <!-- Remaining code... -->                                      
                     <div id="successMessage" class="alert alert-success d-none">
                         <p></p>
                     </div>
@@ -771,6 +780,7 @@ let typingTimeout;
 let showTimestamps = false;  // Initially set to false, meaning timestamps are hidden
 let localStream = null;
 let callWindow = null;
+let xhr
 const remoteAudio = document.getElementById('remoteAudio');
 const MAX_FILE_SIZE = 1024 * 1024 * 1024 * 1024; // 1 Terabyte
 const notificationAudio = document.getElementById('notificationSound');
@@ -1924,20 +1934,59 @@ function updateProgressBar(percent, complete = false, message = '') {
 };
 
 const fileInput = document.getElementById('file-input');
+
 function previewFile() {
-    
     if (fileInput.files.length > 0) {
         const file = fileInput.files[0];
         const fileInfo = document.getElementById('file-info');
-        fileInfo.textContent = `File name: ${file.name}, File type: ${file.type}, File size: ${file.size / 1024 / 1024} MB`; // Update file information in the modal
+        fileInfo.textContent = `File name: ${file.name}, File type: ${file.type}, File size: ${(file.size / 1024 / 1024).toFixed(2)} MB`; // Update file information in the modal
+
+        // Attempt to preview the file if it's an image
+        const filePreview = document.getElementById('file-preview');
+        filePreview.innerHTML = ''; // Clear existing preview
+        if (file.type.startsWith('image/')) {
+            const img = document.createElement('img');
+            img.src = URL.createObjectURL(file);
+            img.onload = () => { URL.revokeObjectURL(img.src); };  // Clean up after loading
+            img.classList.add('max-w-full', 'h-[100px]', 'rounded-lg'); // Tailwind classes
+            filePreview.appendChild(img);
+        } else {
+            filePreview.textContent = 'Preview not available for this file type';
+        }
+
         toggleModal('filePreviewModal', true); // Show the modal
     }
-};
-function resetFilePreviewAndInput() {
-    document.getElementById('file-input').value = ''; // Reset file input
-    document.getElementById('file-info').textContent = ''; // Clear file info in the modal
 }
 
+function removeSelectedFile() {
+    // Clear file input
+    document.getElementById('file-input').value = '';
+    // Clear file info and preview in the modal
+    document.getElementById('file-info').textContent = '';
+    document.getElementById('file-preview').innerHTML = `<label for="file-input" class="cursor-pointer"><svg fill="#000000" width="64px" height="64px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M4,23H20a1,1,0,0,0,1-1V6a1,1,0,0,0-.293-.707l-4-4A1,1,0,0,0,16,1H4A1,1,0,0,0,3,2V22A1,1,0,0,0,4,23ZM5,3H15.586L19,6.414V21H5Zm11,9a1,1,0,0,1-1,1H13v2a1,1,0,0,1-2,0V13H9a1,1,0,0,1,0-2h2V9a1,1,0,0,1,2,0v2h2A1,1,0,0,1,16,12Z"></path></g></svg></label>`; 
+
+    // Display the 'add file' icon since we no longer have a file to show
+    // Safely attempt to display the 'add file' icon since we no longer have a file to show
+    const addFileIcon = document.getElementById('add-file-icon');
+    if (addFileIcon) {
+        addFileIcon.classList.remove('hidden');
+    }
+};
+
+// Bind click event to file preview area to allow selecting a new file
+document.getElementById('file-preview').addEventListener('click', function() {
+    
+    previewFile()
+
+});
+
+function resetFilePreviewAndInput() {
+    // Reset file input and clear preview
+    document.getElementById('file-input').value = '';
+    document.getElementById('file-info').textContent = '';
+    document.getElementById('file-preview').innerHTML = ''; // Clear the file preview
+    toggleModal('filePreviewModal', false); // Hide the modal
+}
 
 function sendFileToDevicePreview() {
     if (fileInput.files.length > 0) {
@@ -1946,10 +1995,16 @@ function sendFileToDevicePreview() {
 }}
 // Function to send the file to the server
 function sendFileToDevice(file) {
+    
     // Check if the File APIs are supported in the browser
     if (!(window.File && window.FileReader && window.FileList && window.Blob)) {
         alert('The File APIs are not fully supported in this browser.');
         return;
+    }
+    
+    if (xhr) {
+        xhr.abort();  // Abort any ongoing request
+        xhr = null;  // Reset the xhr variable
     }
 
     const deviceName = document.getElementById('deviceSelectChat').value;
@@ -1960,13 +2015,13 @@ function sendFileToDevice(file) {
 
     const formData = new FormData();
     formData.append('file', file);
-    const xhr = new XMLHttpRequest();
+    xhr = new XMLHttpRequest();
     xhr.open('POST', `/send_file_to_device?device=${deviceName}`, true);
 
     xhr.upload.onprogress = function(event) {
         if (event.lengthComputable) {
             const percentComplete = (event.loaded / event.total) * 100;
-            const progressBar = document.querySelector('.progress-bar');
+            const progressBar = document.querySelector('.modal-body .progress-bar');
             progressBar.style.width = percentComplete + '%';
             progressBar.textContent = Math.round(percentComplete) + '%';
         }
@@ -1974,7 +2029,7 @@ function sendFileToDevice(file) {
 
     xhr.onload = function() {
         if (xhr.status === 200) {
-            const progressBar = document.querySelector('.progress-bar');
+            const progressBar = document.querySelector('.modal-body .progress-bar');
             progressBar.style.width = '100%';
             progressBar.textContent = 'Upload complete';
             appendMessageToChat("Server", `File "${file.name}" sent to ${deviceName}.`, 'server-message');
@@ -2002,7 +2057,20 @@ function sendFileToDevice(file) {
     document.querySelector('.progress').style.display = 'block';
 };
 
+function cancelUpload() {
+    if (xhr) {
+        xhr.abort();  // This stops the request
+        const progressBar = document.querySelector('.modal-body .progress-bar');
+        progressBar.style.width = '0%';
+        progressBar.textContent = 'Upload canceled';
+        document.querySelector('.progress').style.display = 'none';
 
+        // Close the modal and reset relevant UI elements if necessary
+        toggleModal('filePreviewModal', false);
+        resetFilePreviewAndInput();  // Assuming this resets the input form
+        xhr = null;  // Reset the xhr variable
+    }
+}
 
 // Event listener for the file input change event
 document.getElementById('file-input').addEventListener('change', function(e) {
