--- a/templates/server_interface.html
+++ b/templates/server_interface.html
@@ -42,9 +42,7 @@ body {
     background-color: var(--secondary);
     color: var(--text);
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-    line-height: 1.6;
     margin: 0;
-    padding: 20px;
 }
 
 .form-group, .modal-content, #chatBox, .list-group-item {
@@ -393,7 +391,7 @@ fill: #2B641E;
 </head>
 
 <body>
-    <div class="mx-auto max-w-full">
+    <div class="mx-auto max-w-full overflow-y-none">
     <!-- Color Picker Modal -->
     <div id="colorPickerModal" class="fixed inset-0 bg-black bg-opacity-30 backdrop-filter backdrop-blur-sm flex justify-center items-center hidden z-50" aria-labelledby="colorPickerModalLabel" aria-modal="true" role="dialog">
         <div class="modal-dialog modal-dialog-centered">
@@ -455,21 +453,80 @@ fill: #2B641E;
     </div>
 </div>
 
-    <div class="flex flex-wrap bg-gray-900 text-white">
-        <div class="w-full">
-            <!-- Connected Devices Header -->
-            <div class="max-w-screen-lg mx-auto text-center">
-                <h2 id="devices" class="mb-4 text-2xl font-bold text-gray-100">Connected Devices</h2>
-                <!-- Place where the dynamic list will be rendered -->
-                <div class="mt-4 bg-gray-800 p-5 rounded-lg shadow-md">
-                    <ul id="deviceList" class="list-disc list-inside text-gray-300">
-                        <!-- Dynamic device list items will be inserted here -->
-                    </ul>
+<div class="flex flex-wrap bg-gray-900 text-white">
+    <div class="max-w-screen-lg mx-auto">
+        <!-- 4-column grid layout -->
+        <div class="grid grid-cols-4 gap-4">
+            <!-- First Column - Connected Devices -->
+            <div class="col-span-1">
+                <h2 id="devices" class="mb-2 text-xl font-bold text-gray-100">Connected Devices:</h2>
+                <ul id="deviceList" class="list-disc list-inside text-gray-300">
+                    <!-- Dynamic device list items will be inserted here -->
+                </ul>
+            </div>
+    
+            <!-- Second Column - Clipboard Alert and Device URL -->
+            <div class="col-span-1">
+                <div class="list-group">
+                    <div id="clipboardAlert" class="alert alert-success alert-dismissible fade show mt-3 text-center" style="display:none;">
+                        Copied to clipboard!
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <a href="#" class="list-group-item list-group-item-action shadow-sm" onclick="handleCopyClick(event, '{{ base_url }}:{{ port }}{{ endpoint }}')">
+                        Device can connect on: {{ base_url }}:{{ port }}{{ endpoint }}
+                    </a>
                 </div>
+            </div>
+    
+            <!-- Third Column - Device Selector -->
+            <div class="col-span-1">
+                <div class="flex justify-center align-center">
+                    <select id="deviceSelectChat" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 transition duration-300 ease-in-out">
+                        <option value="Select a device" selected disabled>Select a device</option>
+                        <!-- Options will be dynamically added here by JavaScript -->
+                    </select>
+                </div>
+            </div>
+    
+            <!-- Fourth Column (you can add additional content here or leave it empty if not needed) -->
+            <div class="col-span-1">
+                <!-- Additional content or leave empty -->
             </div>
         </div>
     </div>
     
+    
+</div>
+            <!-- Server Actions Div -->
+            <div id="serverActions" class="flex flex-wrap justify-center items-center gap-4 sm:flex-nowrap">
+                <!-- Notification Section -->
+                <button id="sendNotificationBtn" onclick="sendNotification()" class="btn btn-warning rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Send Notification</button>
+                
+                <!-- Background Color Change -->
+                <button onclick="changeBackgroundColor()" class="btn btn-info rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" id="colorPicker-btn">Change Color</button>
+                
+                <!-- File Sending Section -->
+                <input type="file" id="file-input" class="hidden" onchange="previewFile()">
+                <button onclick="document.getElementById('file-input').click()" class="btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Send File</button>
+
+            <!-- Recording Section -->
+                <button id="toggleRecordButton" class="btn btn-accent rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" type="button">Start Recording</button>    
+                
+                <!-- Timestamp Toggle -->
+                <button id="toggle-timestamps" class="btn btn-success rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" type="button">Toggle Timestamps</button>
+                
+                <!-- Voice Call Section -->
+                <div id="voiceCallSection" class="w-full sm:w-auto mt-3 flex flex-col sm:flex-row items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                    <!-- Trigger for Call Setup Modal -->
+                    <button id="startCallButton" onclick="startCall()" btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Start a Call</button>
+                    <button id="shareScreenButton" class="btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Share Screen</button>
+                    <button id="endCallButton" class="btn btn-red-500 hover:bg-red-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" disabled>End Call</button>
+                    
+                    <audio id="remoteAudio" autoplay class="hidden"></audio>
+                </div>
+            </div>
 
     <!-- Web Calling UI -->
     <div id="webCallingUI" class="hidden fixed inset-0 bg-gray-800 border border-gray-200 rounded-lg shadow z-50">
@@ -610,36 +667,7 @@ fill: #2B641E;
      
 
         <!-- Device Select Chat -->
-        <div class="flex justify-center items-center">
-            <div class="col-lg-10">
-                <div class="flex justify-center align-center">
-                    <select id="deviceSelectChat" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 transition duration-300 ease-in-out">
-                        <option value="Select a device" selected disabled>Select a device</option>
-                        <!-- Options will be dynamically added here by JavaScript -->
-                    </select>
-                </div>
-                
-            <div class="flex justify-center m-5">
-                <div class="list-group">
-                    <div id="clipboardAlert" class="alert alert-success alert-dismissible fade show mt-3 text-center" role="alert" style="display:none;">
-                        Copied to clipboard!
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <a href="#" class="list-group-item list-group-item-action shadow-sm" 
-                    onclick="handleCopyClick(event, '{{ base_url }}:{{ port }}{{ endpoint }}')">
-                        Device can connect on: {{ base_url }}{{ port }}{{ endpoint }}
-                    </a>
-                </div>
-            </div>
-        </div>
-    
-
-    
-
-    
-    {% if success %}
+        <div class="flex justify-center items-center">    {% if success %}
     <div class="success container-fluid">
         <div class="success__icon">
         <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m12 1c-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11-4.925-11-11-11zm4.768 9.14c.0878-.1004.1546-.21726.1966-.34383.0419-.12657.0581-.26026.0477-.39319-.0105-.13293-.0475-.26242-.1087-.38085-.0613-.11844-.1456-.22342-.2481-.30879-.1024-.08536-.2209-.14938-.3484-.18828s-.2616-.0519-.3942-.03823c-.1327.01366-.2612.05372-.3782.1178-.1169.06409-.2198.15091-.3027.25537l-4.3 5.159-2.225-2.226c-.1886-.1822-.4412-.283-.7034-.2807s-.51301.1075-.69842.2929-.29058.4362-.29285.6984c-.00228.2622.09851.5148.28067.7034l3 3c.0983.0982.2159.1748.3454.2251.1295.0502.2681.0729.4069.0665.1387-.0063.2747-.0414.3991-.1032.1244-.0617.2347-.1487.3236-.2554z" fill="#393a37" fill-rule="evenodd"></path></svg>
@@ -719,7 +747,7 @@ fill: #2B641E;
       </div>
     </div>
   </div>
-</div>
+
           <!-- Device Actions -->
           <div id="deviceActions" class="mt-3">
             <div class="row justify-content-center">
@@ -744,34 +772,7 @@ fill: #2B641E;
                             <button id="send-message" class="btn btn-primary" type="button">Send</button>
                             <button id="clear-chat" class="btn btn-secondary" type="button">Clear</button>
                         </div>
-                                    <!-- Server Actions Div -->
-            <div id="serverActions" class="flex flex-wrap justify-center items-center gap-4 sm:flex-nowrap">
-                <!-- Notification Section -->
-                <button id="sendNotificationBtn" onclick="sendNotification()" class="btn btn-warning rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Send Notification</button>
-                
-                <!-- Background Color Change -->
-                <button onclick="changeBackgroundColor()" class="btn btn-info rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" id="colorPicker-btn">Change Color</button>
-                
-                <!-- File Sending Section -->
-                <input type="file" id="file-input" class="hidden" onchange="previewFile()">
-                <button onclick="document.getElementById('file-input').click()" class="btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Send File</button>
 
-              <!-- Recording Section -->
-                <button id="toggleRecordButton" class="btn btn-accent rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" type="button">Start Recording</button>    
-                
-                <!-- Timestamp Toggle -->
-                <button id="toggle-timestamps" class="btn btn-success rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" type="button">Toggle Timestamps</button>
-                
-                <!-- Voice Call Section -->
-                <div id="voiceCallSection" class="w-full sm:w-auto mt-3 flex flex-col sm:flex-row items-center space-y-4 sm:space-y-0 sm:space-x-4">
-                    <!-- Trigger for Call Setup Modal -->
-                    <button id="startCallButton" onclick="startCall()" btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Start a Call</button>
-                    <button id="shareScreenButton" class="btn btn-blue-500 hover:bg-blue-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">Share Screen</button>
-                    <button id="endCallButton" class="btn btn-red-500 hover:bg-red-600 rounded-lg py-2 px-4 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" disabled>End Call</button>
-                    
-                    <audio id="remoteAudio" autoplay class="hidden"></audio>
-                </div>
-            </div>
                     </div>
                     <!-- Remaining code... -->                                      
                     <div id="successMessage" class="alert alert-success d-none">
@@ -850,8 +851,8 @@ fill: #2B641E;
                 </div>
             </div>
 
-
                     </div>
+                </div>
 <script>
     
 const socket = io(location.origin)
